--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -5,7 +5,12 @@
    "id": "eec14d28",
    "metadata": {},
    "source": [
-    "# Channel Polarization\n",
+    "# Polar Code\n",
+    "Writer: Hosung Joo (zxcqa123@postech.ac.kr)\n",
+    "\n",
+    "This document briefly describes how to polar-encode and polar-decode.\n",
+    "\n",
+    "## Encoding: Channel Polarization\n",
     "\n",
     "Consider 2-bit transmitting channel such that:\n",
     "- one bit is transmitted without any process\n",
@@ -75,7 +80,43 @@
    "id": "d96d614c",
    "metadata": {},
    "source": [
-    "In addition, we use 1 or 0 (bits) for the data. XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation. <b><i>The addition in mod 2</i></b> is the addition in Galois field of $GF(2)$."
+    "Meanwhile, we use 1 or 0 (bits) for the data. In actual, XOR operation for $x_{4}G_{2}$ was needed. The XOR operation can be implemented by adding the bits and then the (mod 2) operation. <b><i>The addition in mod 2</i></b> is the addition in Galois field of $GF(2)$.\n",
+    "\n",
+    "<details>\n",
+    "    <summary>See little details of $GF(2)$. Click here.</summary>\n",
+    "\n",
+    "### Little note on $GF(2)$:\n",
+    "\n",
+    "- $GF(2) = \\{K,+,\\times\\}$\n",
+    "- elements: $K=\\{0,1\\}$\n",
+    "- operations: $\\{+,\\times\\}$\n",
+    "\n",
+    " - actual operation: $+$ is bitwise XOR, $\\times$ is bitwise AND.\n",
+    " $$\\begin{equation} \\label{GF2}\n",
+    " \\begin{split}\n",
+    " 0 + 0 = 0, & ~ 0 + 1 = 1, \\\\\n",
+    " 1 + 0 = 1, & ~ 1 + 1 = 0 \\\\\n",
+    " & \\\\\n",
+    " 0 \\times 0 = 0, & ~ 0 \\times 1 = 0, \\\\\n",
+    " 1 \\times 0 = 0, & ~ 1 \\times 1 = 1 \\\\\n",
+    " & \\\\\n",
+    " Note: for ~ any ~ & x \\in K, \\\\\n",
+    " x + x = 0, & ~ thus, ~ -x = x \\\\\n",
+    " x + 0 = x~ & \\\\\n",
+    " x \\times x = x, & ~ thus, ~ x^{-1} = x \\\\\n",
+    " x \\times 1 = x~&\n",
+    " \\end{split}\n",
+    " \\end{equation}$$\n",
+    " - associativity: for any $x, y, z \\in K$, $x+(y+z)=(x+y)+z$, $x\\times(y\\times z)=(x\\times y)\\times z)$\n",
+    " - commutativity: for any $x, y \\in K$, $x+y=y+x$, $x\\times y=y\\times x$\n",
+    " - identity: $0$ for $+$, $1$ for $\\times$. Note that $0$ or $1$ is $\\in K$\n",
+    " - inverse: <i>itself</i>\n",
+    " - distributivity: for any $x, y, z \\in K$, $x\\times(y+z) = x\\times y + x\\times z$\n",
+    "\n",
+    "Simply,\n",
+    "$x+y~(mod~2)$ is $x+y$ in $GF(2)$. So we use the 'mod 2' operation.\n",
+    "    \n",
+    "</details>"
    ]
   },
   {
@@ -103,7 +144,7 @@
    "id": "0dcd77ea",
    "metadata": {},
    "source": [
-    "Thus, this $G_{2}$ matrix is a one-to-one mapping for Galois field of $GF(2^{2})$. (Of course $G_{2}$ has the inverse.) Channel polarization is a linear-based process, thus, it is faster than the other complicated encoders. See the example below."
+    "This $G_{2}$ matrix is a one-to-one mapping for Galois field of $GF(2^{2})$. (Of course $G_{2}$ has the inverse.) Channel polarization is a linear-based process, thus, it is faster than the other complicated encoders. See the example below."
    ]
   },
   {
@@ -148,6 +189,8 @@
    "id": "bafd97aa",
    "metadata": {},
    "source": [
+    "### Good Channel, Bad Channel\n",
+    "\n",
     "One may notice that the $u_{0}$ is the bad channel, and the $u_{1}$ is the good channel.\n",
     "\n",
     "One may <b>not</b> use $u_{0}$ for the data transmission, but as a redundancy. (<i>i.e.</i> We call this as <i><b>Frozen Bit</b></i>.)\n",
@@ -287,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "id": "9bbe38e6",
    "metadata": {},
    "outputs": [
@@ -295,10 +338,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Kronecker product of G2 and G2:\n",
       "[[1 0 0 0]\n",
       " [1 1 0 0]\n",
       " [1 0 1 0]\n",
-      " [1 1 1 1]]\n"
+      " [1 1 1 1]]\n",
+      "Kronecker product of G4 and G2:\n",
+      "[[1 0 0 0 0 0 0 0]\n",
+      " [1 1 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 0]\n",
+      " [1 1 1 1 0 0 0 0]\n",
+      " [1 0 0 0 1 0 0 0]\n",
+      " [1 1 0 0 1 1 0 0]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [1 1 1 1 1 1 1 1]]\n"
      ]
     }
    ],
@@ -315,7 +368,12 @@
     "\n",
     "G2 = np.array([[1,0],[1,1]])\n",
     "G4_alt = kronecker_product(G2,G2)\n",
-    "print(G4_alt)"
+    "print('Kronecker product of G2 and G2:')\n",
+    "print(G4_alt)\n",
+    "\n",
+    "G8_alt = kronecker_product(G4_alt,G2)\n",
+    "print('Kronecker product of G4 and G2:')\n",
+    "print(G8_alt)"
    ]
   },
   {
@@ -325,7 +383,7 @@
    "source": [
     "Constructing $G_{8}$ is now simple as $G_{8} = G_{4} \\mathbb{G}_{2}$, using the Kronecker product. We may use recursive function for this.\n",
     "\n",
-    "Now we may implement such polarization coding (<i>i.e. <b>Polar Code</b></i>) as below. This encoding function was implemented as a distinguished <i>.py</i> file."
+    "Now we may implement such polarization coding (<i>i.e. <b>Polar Code</b></i>) perfectly as below. This encoding function was implemented as a distinguished <i>.py</i> file."
    ]
   },
   {
@@ -455,16 +513,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0efbe3cc",
+   "id": "54971e57",
    "metadata": {},
    "source": [
-    "# Decoding Scenario of Channel Polarization\n",
+    "## Decoding Scenario of Channel Polarization\n",
     "\n",
-    "Now we need the decoding function. Recall $G_{2}$ case. If we freeze $u_{0}=0$, we send $\\begin{bmatrix}0 & 0\\end{bmatrix}$ or $\\begin{bmatrix}1 & 1\\end{bmatrix}$. Let's be simple: <b><i>BPSK</i></b> scenario. Other communication scenario also can be decoded if we specify the decision boundaries as well. (Let's make the decision boundary $(v_{d}\\ as\\ decision\\_value, \\delta_{0}\\ as\\ 0\\ direction)$ and the noise spectral density $N_{o}$ to be input variables of the decoding function.)\n",
+    "Now we need the decoding function. First we should note that the optimal (fastest) decoding is still on research. Still, there are challenges to utilize polar code fast and compact.\n",
     "\n",
-    "### BPSK, hard decision scenario\n",
+    "Let's start by recalling $G_{2}$ case.\n",
     "\n",
-    "If the BPSK sends 0 as $+1$ and 1 as $-1$, $(v_{d}, \\delta_{0}) = (0.0, +1.0)$.\n",
+    "If we freeze $u_{0}=0$, we send $\\begin{bmatrix}0 & 0\\end{bmatrix}$ or $\\begin{bmatrix}1 & 1\\end{bmatrix}$.\n",
+    "\n",
+    "Let's be simple: <b><i>BPSK</i></b> scenario. Thus, we send $\\mathbb{y}$ while $\\mathbb{y}=\\mathbb{x}G$ and we receive $\\mathbb{r}=\\mathbb{y}+\\mathbb{n}$.\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq_fig_ChannelCoding_BPSK}\n",
+    "\\mathbb{x}-PolarCode(G)-\\mathbb{y}-BPSK(AWGN(\\mathbb{n}))-\\mathbb{r}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Other communication scenario also can be decoded if we specify the decision boundaries as well. (Let's make the decision boundary $(v_{d}\\ as\\ decision\\_value, \\delta_{0}\\ as\\ 0\\ direction)$ and the AWGN noise spectral density $N_{o}$ to be input variables of the decoding function.)\n",
+    "\n",
+    "### BPSK, repetive coding, hard decision scenario\n",
+    "\n",
+    "If the BPSK sends 0 as $+1$ and 1 as $-1$, $(v_{d}, \\delta_{0}) = (0.0, +1.0)$. ($\\delta_{1} = -1.0$)\n",
     "\n",
     "We can make the decision <i>hard</i> if we decide the received symbol $s$ to be 0 when it satisfies $\\frac{s-v_{d}}{\\delta_{0}-v_{d}}>0$.\n",
     "\n",
@@ -472,7 +542,11 @@
     "\n",
     "However, we cannot decide whether <b><i>the repeatedly transmitted bit</i></b> $u_{1}$ was 0 or 1 by this hard decision scenario, if we received $\\mathbb{r}=\\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, while it is <b><i>more likely</i></b> to be $\\hat{u}_1=0$.\n",
     "\n",
-    "### BPSK, soft decision scenario\n",
+    "Receiving these values (<u>one positive, while the other one negative</u>) happens <b>often enough</b>. You can actually calculate the probability which would depend on the noise variance, and it will definitely not be zero.\n",
+    "\n",
+    "<b>Summary</b>: Hard decision cannot decide $\\mathbb{r}=\\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$ case.\n",
+    "\n",
+    "### BPSK, repetive coding, soft decision scenario\n",
     "\n",
     "We want to see what the <b><i>likelihood</i></b> is, thus, we see the <i>likelihood ratio (LR)</i>. The likelihood ratio on transmitting the bit stream $\\mathbb{x}=\\left\\{x_{i}\\right\\}$ and received values $\\mathbb{r}=\\left\\{r_{i}\\right\\}$ is defined by:\n",
     "\n",
@@ -482,9 +556,10 @@
     "\n",
     "We can equivalently hard-decide that $\\hat{u}_{i}=0$ if $LR_{i}>1$, otherwise $\\hat{u}_{i}=1$.\n",
     "\n",
-    "If the channel was AWGN, i.e., $r_{i} = x_{i} + n$ where $n \\sim \\mathcal{N}(mean=0,var=N_{symbol}=\\sigma^{2})$, the PDF of $n$ follows $p_{n}(r) = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r}{\\sigma}\\right)^{2}}$.\n",
+    "If the channel was AWGN, i.e., $r_{i} = \\delta_{i} + n$ where $n \\sim \\mathcal{N}(mean=0,var=N_{symbol}=\\sigma^{2})$, \\\n",
+    "the PDF of $n$ follows $p_{n}(r) = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r-\\delta}{\\sigma}\\right)^{2}}$ where $\\delta$ was actually sent (after processing channel equalization).\n",
     "\n",
-    "Then, with known value (by channel equalization from CSI,) $\\delta_{0}$ and $\\delta_{1}$:\n",
+    "Then, with known value (again, worth mentioning, by channel equalization from CSI,) $\\delta_{0}$ and $\\delta_{1}$:\n",
     "\n",
     "$\\Pr \\left[ {r_{i}|x_{i}=0} \\right] = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}}$, $\\Pr \\left[ {r_{i}|x_{i}=1} \\right] = \\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2}}$.\n",
     "\n",
@@ -494,9 +569,20 @@
     "LR_{i} = \\frac{\\Pr \\left[ {r_{i}|x_{i}=0} \\right]}{\\Pr \\left[ {r_{i}|x_{i}=1} \\right]}\n",
     "\\end{equation} = \\frac{e^{-\\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}}}{e^{-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2}}} = e^{-\\left[ \\left(\\frac{r_{i}-\\delta_{0}}{\\sigma}\\right)^{2}-\\left(\\frac{r_{i}-\\delta_{1}}{\\sigma}\\right)^{2} \\right]}$$\n",
     "\n",
-    "- (Note that this operation was only based on the <b>likelihood</b>, not <i>a posteriori</i>.) <a>(out of scope.)</a>\n",
+    "- (Note that this operation was only based on the <b>likelihood</b>, not <i>a posteriori</i>.)\n",
+    "<details>\n",
+    "    <summary> - if you are to disduss maximizing a posteriori estimation, <i>click here.</i> </summary>\n",
     "\n",
-    "The exponent is called <b><i>Log of Likelihood-Ratio (LLR)</i></b>, because it is. It is its log.\n",
+    "    ### MAPE\n",
+    "\n",
+    "    Use the Bayes rule:\n",
+    "    $$\\begin{equation}\n",
+    "    \\Pr \\left[ {x_{i}=0|r_{i}} \\right] = \\frac{\\Pr \\left[ {x_{i}=0} \\right] \\Pr \\left[ {r_{i}|x_{i}=0} \\right]}{\\Pr \\left[ {r_{i}} \\right]}\n",
+    "    \\end{equation}$$\n",
+    "    \n",
+    "</details>\n",
+    "\n",
+    "The exponent is called <b><i>Log of the Likelihood Ratio (LLR)</i></b>, because it is. It is its log.\n",
     "\n",
     "One may notice that <b>LLR</b> calculation is actually easier <i>(faster!)</i> than <i>LR</i> calculation. We may apply the exponential function later, but we may also use the same hard decision as $\\hat{u}_{i}=0$ if $LLR_{i}>0$, otherwise $\\hat{u}_{i}=1$.\n",
     "\n",
@@ -523,13 +609,24 @@
     "\n",
     "### Polarized channel soft decoding\n",
     "\n",
-    "What if $x = \\begin{bmatrix}u_{0} & u_{1}\\end{bmatrix}$ and there was no 100% probability of the distribution of "
+    "What if $x = \\begin{bmatrix}u_{0} & u_{1}\\end{bmatrix}$ and there was no 100% probability of the distribution of $u_{0}$? We start from $\\mathbb{r}$.\n",
+    "\n",
+    "We clearly see that if $\\delta_{0}=+1$ and $\\delta_{1}=-1$, and $x_{i} \\in \\{\\delta_{0}, \\delta_{1}\\}$,\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq8}\n",
+    "\\begin{split}\n",
+    "r_{0} & = y_{0} + n_{0} = x_{0} x_{1} + n_{0} \\\\\n",
+    "r_{1} & = y_{1} + n_{0} = x_{1} + n_{1}\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "We can decide "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c8598f",
+   "id": "43232f94",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -559,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6956b9",
+   "id": "84a09500",
    "metadata": {},
    "outputs": [],
    "source": []
