explanation more added.

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54971e57",
+   "id": "b26749eb",
    "metadata": {},
    "source": [
     "## Decoding Scenario of Channel Polarization\n",
@@ -620,13 +620,61 @@
     "\\end{split}\n",
     "\\end{equation}$$\n",
     "\n",
-    "We can decide "
+    "We can decide $L(y_{i})$ easily. We should decide $x_{i}$, thus, we should connect $L(y_{i})$ to $L(x_{i})$. \\\n",
+    "Note that $\\Pr \\left[ {x} \\right] = \\Pr \\left[ {x|y} \\right] \\Pr \\left[ {y} \\right]$. See the equation below.\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq9}\n",
+    "\\begin{split}\n",
+    "\\Pr \\left[ {\\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right] = &\n",
+    "\\Pr \\left[ {y_{0}} \\right] \\Pr \\left[ {y_{1}} \\right]\n",
+    "\\\\\n",
+    "\\Pr \\left[ {u_{0}=0} \\right] = & \\sum_{y_{i} \\in \\{0,1\\}}^{}\n",
+    "\\Pr \\left[ {u_{0}=0 | \\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right]\n",
+    "\\Pr \\left[ {\\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right] \\\\\n",
+    "\\\\\n",
+    "= &\n",
+    "\\Pr \\left[ {y_{0}=0} \\right] \\Pr \\left[ {y_{1}=0} \\right] +\n",
+    "\\Pr \\left[ {y_{0}=1} \\right] \\Pr \\left[ {y_{1}=1} \\right]\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Thus, LR of $x_{0}$ is:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq10}\n",
+    "\\begin{split}\n",
+    "LR(u_{0}) = & \\frac{\\Pr \\left[ {u_{0}=0} \\right]}{\\Pr \\left[ {u_{0}=1} \\right]} \\\\\n",
+    "= &\n",
+    "\\frac{\\Pr \\left[ {y_{0}=0} \\right] \\Pr \\left[ {y_{1}=0} \\right] +\n",
+    "\\Pr \\left[ {y_{0}=1} \\right] \\Pr \\left[ {y_{1}=1} \\right]}\n",
+    "{\\Pr \\left[ {y_{0}=0} \\right] \\Pr \\left[ {y_{1}=1} \\right] +\n",
+    "\\Pr \\left[ {y_{0}=1} \\right] \\Pr \\left[ {y_{1}=0} \\right]} \\\\\n",
+    "= &\n",
+    "\\frac{\\frac{\\Pr \\left[ {y_{0}=0} \\right]}{\\Pr \\left[ {y_{0}=1} \\right]}\n",
+    "\\frac{\\Pr \\left[ {y_{1}=0} \\right]}{\\Pr \\left[ {y_{1}=1} \\right]} + 1}\n",
+    "{\\frac{\\Pr \\left[ {y_{0}=0} \\right]}{\\Pr \\left[ {y_{0}=1} \\right]} +\n",
+    "\\frac{\\Pr \\left[ {y_{1}=0} \\right]}{\\Pr \\left[ {y_{1}=1} \\right]}} \\\\\n",
+    "= &\n",
+    "\\frac{LR(y_{0})LR(y_{1}) + 1}{LR(y_{0}) + LR(y_{1})}\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Note that LR(y) will be large ($>> 1$) in most cases. Taking the log, we get\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq11}\n",
+    "\\begin{split}\n",
+    "LLR(u_{0}) = & ~ \\log{(LR(y_{0})LR(y_{1})+1)} - \\log{(LR(y_{0}) + LR(y_{1})} \\\\\n",
+    "\\simeq & ~ \\log{(LR(y_{0})LR(y_{1}))} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(LR(y_{0}))} + \\log{(LR(y_{1}))} - \\log{\\max(LR(y_{0}),LR(y_{1})} \\\\\n",
+    "= & ~ \\log{\\min(LR(y_{0}),LR(y_{1})} \\\\\n",
+    "= & ~ \\min(LLR(y_{0}),LLR(y_{1})\n",
+    "\\end{split}\n",
+    "\\end{equation}$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43232f94",
+   "id": "7480e116",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -656,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84a09500",
+   "id": "f46a5a08",
    "metadata": {},
    "outputs": [],
    "source": []
