XOR belief propagation explaned.

--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -91,7 +91,7 @@
     "- elements: $K=\\{0,1\\}$\n",
     "- operations: $\\{+,\\times\\}$\n",
     "\n",
-    " - actual operation: $+$ is bitwise XOR, $\\times$ is bitwise AND.\n",
+    " - actual operation: $+$ is bitwise XOR($\\oplus$), $\\times$ is bitwise AND.\n",
     " $$\\begin{equation} \\label{GF2}\n",
     " \\begin{split}\n",
     " 0 + 0 = 0, & ~ 0 + 1 = 1, \\\\\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26749eb",
+   "id": "459c874b",
    "metadata": {},
    "source": [
     "## Decoding Scenario of Channel Polarization\n",
@@ -605,29 +605,54 @@
     "\n",
     "For example, if we received $\\mathbb{r} = \\begin{bmatrix}1.5 & -0.1\\end{bmatrix}$, then $LLR(\\hat{u}_1) = LLR_{0} + LLR_{1} = \\frac{2.5^2 - 0.5^2 + 0.9^2 - 1.1^2}{N_{symbol}} > 0$, thus, $\\hat{u}_1 = 0$.\n",
     "\n",
-    "It gets more complicated when you actually don't know what $u_{0}$ was.\n",
-    "\n",
-    "### Polarized channel soft decoding\n",
+    "It gets more complicated when you actually don't know what $u_{0}$ was."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40bdab0b",
+   "metadata": {},
+   "source": [
+    "### No frozen bit, soft decoding of 2-bit polarized channel\n",
     "\n",
     "What if $x = \\begin{bmatrix}u_{0} & u_{1}\\end{bmatrix}$ and there was no 100% probability of the distribution of $u_{0}$? We start from $\\mathbb{r}$.\n",
     "\n",
-    "We clearly see that if $\\delta_{0}=+1$ and $\\delta_{1}=-1$, and $x_{i} \\in \\{\\delta_{0}, \\delta_{1}\\}$,\n",
+    "We clearly see that if $\\delta_{0}=+1$ and $\\delta_{1}=-1$, and $y_{i} \\in \\{\\delta_{0}, \\delta_{1}\\}$,\n",
     "\n",
     "$$\\begin{equation} \\label{eq8}\n",
     "\\begin{split}\n",
     "r_{0} & = y_{0} + n_{0} = x_{0} x_{1} + n_{0} \\\\\n",
-    "r_{1} & = y_{1} + n_{0} = x_{1} + n_{1}\n",
+    "r_{1} & = y_{1} + n_{1} = x_{1} + n_{1}\n",
     "\\end{split}\n",
     "\\end{equation}$$\n",
     "\n",
-    "We can decide $L(y_{i})$ easily. We should decide $x_{i}$, thus, we should connect $L(y_{i})$ to $L(x_{i})$. \\\n",
-    "Note that $\\Pr \\left[ {x} \\right] = \\Pr \\left[ {x|y} \\right] \\Pr \\left[ {y} \\right]$. See the equation below.\n",
+    "We can calculate $L(y_{i})$ easily as previous sections. \\\n",
+    "We should decide $x_{i}\\in\\{\\delta_{0},~\\delta_{1}\\}$. \\\n",
+    "(Let's distinguish the bits $u_{i} \\in \\{0,~1\\}$ and $x_{i} \\in\\{ \\delta_{0} , ~ \\delta_{1} \\}$)\n",
+    "\n",
+    "Goal: we should connect $L(y_{i})$ to $L(u_{i})$.\n",
+    "\n",
+    "$$\\begin{equation} \\label{G2_all_cases}\n",
+    "X = \n",
+    "\\begin{bmatrix}\n",
+    " 0 & 0 \\\\\n",
+    " 0 & 1 \\\\\n",
+    " 1 & 0 \\\\\n",
+    " 1 & 1 \\end{bmatrix}, ~~~~\n",
+    "Y = X G_{2} =\n",
+    "\\begin{bmatrix}\n",
+    " 0 & 0 \\\\\n",
+    " 1 & 1 \\\\\n",
+    " 1 & 0 \\\\\n",
+    " 0 & 1 \\end{bmatrix}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "We see $u_{0}=y_{0}\\oplus y_{1}$. Note that $\\Pr \\left[ {x} \\right] = \\Pr \\left[ {x|y} \\right] \\Pr \\left[ {y} \\right]$. Also note that $\\tanh(z) = \\frac{e^{z}-e^{-z}}{e^{z}+e^{-z}}$.\n",
+    "\n",
+    "Since $\\Pr \\left[ {\\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right] = \\Pr \\left[ {y_{0}} \\right] \\Pr \\left[ {y_{1}} \\right]$, see the equation below.\n",
     "\n",
     "$$\\begin{equation} \\label{eq9}\n",
     "\\begin{split}\n",
-    "\\Pr \\left[ {\\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right] = &\n",
-    "\\Pr \\left[ {y_{0}} \\right] \\Pr \\left[ {y_{1}} \\right]\n",
-    "\\\\\n",
     "\\Pr \\left[ {u_{0}=0} \\right] = & \\sum_{y_{i} \\in \\{0,1\\}}^{}\n",
     "\\Pr \\left[ {u_{0}=0 | \\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right]\n",
     "\\Pr \\left[ {\\mathbb{y} = \\begin{bmatrix}y_{0} & y_{1}\\end{bmatrix}} \\right] \\\\\n",
@@ -658,23 +683,21 @@
     "\\end{split}\n",
     "\\end{equation}$$\n",
     "\n",
-    "Note that LR(y) will be large ($>> 1$) in most cases. Taking the log, we get\n",
+    "We conventionally use the approximation on $x>0,y>0$: $$\\log{\\left(\\frac{xy+1}{x+y}\\right)} \\simeq \\mathsf{sgn}(\\log{x}) ~ \\mathsf{sgn}(\\log{y}) ~ \\min{(|\\log{x}|,~|\\log{y}|)}$$\n",
+    "\n",
+    "Note that the approximation always over-estimates (i.e. enlarges the magnitude by at most $\\log 2$), and it overestimates as a magnitude is large. (It is clear, because the $\\min$ function does not care the large one.)\n",
+    "\n",
+    "Again, $u_{0}=y_{0}\\oplus y_{1}$. If $a\\oplus b = c$, then $a = b \\oplus c$. If we know that there are some XOR trios and if we know the LLRs of two, by taking the sign number function ($\\mathsf{sgn}(.)$) and the magnitude of the LLRs, we can estimate the last LLR fast:\n",
     "\n",
     "$$\\begin{equation} \\label{eq11}\n",
-    "\\begin{split}\n",
-    "LLR(u_{0}) = & ~ \\log{(LR(y_{0})LR(y_{1})+1)} - \\log{(LR(y_{0}) + LR(y_{1})} \\\\\n",
-    "\\simeq & ~ \\log{(LR(y_{0})LR(y_{1}))} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
-    "\\simeq & ~ \\log{(LR(y_{0}))} + \\log{(LR(y_{1}))} - \\log{\\max(LR(y_{0}),LR(y_{1})} \\\\\n",
-    "= & ~ \\log{\\min(LR(y_{0}),LR(y_{1})} \\\\\n",
-    "= & ~ \\min(LLR(y_{0}),LLR(y_{1})\n",
-    "\\end{split}\n",
+    "LLR(a) = \\mathsf{sgn}(LLR(b))~ \\mathsf{sgn}(LLR(c))~ \\min(|LLR(b)|,~|LLR(c)|)\n",
     "\\end{equation}$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7480e116",
+   "id": "f9000c67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -702,12 +725,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f46a5a08",
+   "cell_type": "markdown",
+   "id": "3b1046e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<details>\n",
+    "    <summary> (These scripts were thrown) </summary>\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq10}\n",
+    "\\begin{split}\n",
+    "LR(u_{0}) = & \\frac{\\Pr \\left[ {u_{0}=0} \\right]}{\\Pr \\left[ {u_{0}=1} \\right]} \\\\\n",
+    "= &\n",
+    "\\frac{\\Pr \\left[ {y_{0}=0} \\right] \\Pr \\left[ {y_{1}=0} \\right] +\n",
+    "\\Pr \\left[ {y_{0}=1} \\right] \\Pr \\left[ {y_{1}=1} \\right]}\n",
+    "{\\Pr \\left[ {y_{0}=0} \\right] \\Pr \\left[ {y_{1}=1} \\right] +\n",
+    "\\Pr \\left[ {y_{0}=1} \\right] \\Pr \\left[ {y_{1}=0} \\right]} \\\\\n",
+    "= &\n",
+    "\\frac{\\frac{\\Pr \\left[ {y_{0}=0} \\right]}{\\Pr \\left[ {y_{0}=1} \\right]}\n",
+    "\\frac{\\Pr \\left[ {y_{1}=0} \\right]}{\\Pr \\left[ {y_{1}=1} \\right]} + 1}\n",
+    "{\\frac{\\Pr \\left[ {y_{0}=0} \\right]}{\\Pr \\left[ {y_{0}=1} \\right]} +\n",
+    "\\frac{\\Pr \\left[ {y_{1}=0} \\right]}{\\Pr \\left[ {y_{1}=1} \\right]}} \\\\\n",
+    "= &\n",
+    "\\frac{LR(y_{0})LR(y_{1}) + 1}{LR(y_{0}) + LR(y_{1})} \\\\\n",
+    "= &\n",
+    "\\frac{e^{LLR(y_{0})+LLR(y_{1})}+1}{e^{LLR(y_{0})}+e^{LLR(y_{1})}}\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Taking the log, we get:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq11}\n",
+    "\\begin{split}\n",
+    "LLR(u_{0}) = & ~ \\log{(LR(y_{0})LR(y_{1})+1)} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(LR(y_{0})LR(y_{1}))} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(LR(y_{0}))} + \\log{(LR(y_{1}))} - \\log{\\max(LR(y_{0}),LR(y_{1}))} \\\\\n",
+    "= & ~ \\log{\\min(LR(y_{0}),LR(y_{1}))} \\\\\n",
+    "= & ~ \\min(LLR(y_{0}),LLR(y_{1}))\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "In the first approximation, we neglected 1. This approximation is applicable when $LR(y_{0})LR(y_{1})\\gg1$. In the second approximation, we neglected the smaller LR. This approximation was always applicable with the largest error of $\\log 2$.\n",
+    "\n",
+    "Assuming $LR(y_{0})LR(y_{1})\\ll1$, we get:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq12}\n",
+    "\\begin{split}\n",
+    "LLR(u_{0}) = & ~ \\log{(LR(y_{0})LR(y_{1})+1)} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(1)} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ - \\log{\\max(LR(y_{0}),LR(y_{1}))} \\\\\n",
+    "= & ~ - \\max(LLR(y_{0}),LLR(y_{1}))\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "\n",
+    "Assuming $LR(y_{0})LR(y_{1})\\simeq1$, we get:\n",
+    "\n",
+    "$$\\begin{equation} \\label{eq13}\n",
+    "\\begin{split}\n",
+    "LLR(u_{0}) = & ~ \\log{(LR(y_{0})LR(y_{1})+1)} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(2)} - \\log{(LR(y_{0}) + LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ \\log{(2)} - \\log{\\max(LR(y_{0}),LR(y_{1}))} \\\\\n",
+    "\\simeq & ~ - \\max(LLR(y_{0}),LLR(y_{1}))\n",
+    "\\end{split}\n",
+    "\\end{equation}$$\n",
+    "    \n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
