--- a/PolarCodeExplanation.ipynb
+++ b/PolarCodeExplanation.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6122ac4",
+   "id": "fa141e7f",
    "metadata": {},
    "source": [
     "## Decoding Scenario of Channel Polarization\n",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42fbd9d",
+   "id": "6450f014",
    "metadata": {},
    "source": [
     "### No frozen bit, soft decoding of 2-bit polarized channel\n",
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "97b88cda",
+   "id": "625f3055",
    "metadata": {},
    "outputs": [
     {
@@ -808,9 +808,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad7a8984",
+   "metadata": {},
+   "source": [
+    "### Belief propagation, which node?\n",
+    "\n",
+    "At last, we need to discuss <b>which</b> LLR of the node (bit) needs to be calculated. This is related to the frozen pattern and the permutation matrix.\n",
+    "\n",
+    "Recall $G_{4} = \\begin{bmatrix}G_{2} & \\mathbb{0} \\\\ \\mathbb{0} & G_{2} \\end{bmatrix} \\Pi \\begin{bmatrix}G_{2} & \\mathbb{0} \\\\ \\mathbb{0} & G_{2} \\end{bmatrix} \\Pi$.\n",
+    "\n",
+    "Where $\\Pi$ is the permutation matrix, we can build $G_{8} = \\begin{bmatrix}G_{4} & \\mathbb{0} \\\\ \\mathbb{0} & G_{4} \\end{bmatrix} \\Pi \\begin{bmatrix}G_{4} & \\mathbb{0} \\\\ \\mathbb{0} & G_{4} \\end{bmatrix} \\Pi$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "dd409e38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0]\n",
+      " [1 1 0 0]\n",
+      " [1 0 1 0]\n",
+      " [1 1 1 1]]\n",
+      "[[1 0 0 0 0 0 0 0]\n",
+      " [2 1 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 0]\n",
+      " [2 1 2 1 0 0 0 0]\n",
+      " [1 0 0 0 1 0 0 0]\n",
+      " [2 1 0 0 2 1 0 0]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [2 1 2 1 2 1 2 1]]\n",
+      "[[1 0 0 0 0 0 0 0]\n",
+      " [1 1 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 0]\n",
+      " [1 1 1 1 0 0 0 0]\n",
+      " [1 0 0 0 1 0 0 0]\n",
+      " [1 1 0 0 1 1 0 0]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [1 1 1 1 1 1 1 1]]\n",
+      "The permutation matrix\n",
+      "[[1 0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 0 1 0 0]\n",
+      " [0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 1]]\n",
+      "G16:\n",
+      "[[1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      " [1 1 0 0 0 0 0 0 1 1 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 0 1 0 1 0 0 0 0 0]\n",
+      " [1 1 1 1 0 0 0 0 1 1 1 1 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 1 1 0 0 0 0 0 0 1 1 0 0]\n",
+      " [0 0 0 0 1 0 1 0 0 0 0 0 1 0 1 0]\n",
+      " [0 0 0 0 1 1 1 1 0 0 0 0 1 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "perm8 = [[1,0,0,0,0,0,0,0],\n",
+    "         [0,1,0,0,0,0,0,0],\n",
+    "         [0,0,0,0,1,0,0,0],\n",
+    "         [0,0,0,0,0,1,0,0],\n",
+    "         [0,0,1,0,0,0,0,0],\n",
+    "         [0,0,0,1,0,0,0,0],\n",
+    "         [0,0,0,0,0,0,1,0],\n",
+    "         [0,0,0,0,0,0,0,1]]\n",
+    "perm8 = np.array(perm8)\n",
+    "\n",
+    "G4_eye = np.zeros((8,8), dtype='int64')\n",
+    "G4_eye[0:4,0:4] = G4\n",
+    "G4_eye[4:8,4:8] = G4\n",
+    "\n",
+    "G8_alt = np.matmul(np.matmul(np.matmul(G4_eye,perm8),G4_eye),perm8)\n",
+    "print(G4)\n",
+    "print(G8_alt)\n",
+    "G8 = kronecker_product(G4,G2)\n",
+    "print(G8)\n",
+    "\n",
+    "print('The permutation matrix')\n",
+    "print(perm8)\n",
+    "\n",
+    "perm16 = np.zeros((16,16), dtype='int64')\n",
+    "for i in range(4):\n",
+    "    perm16[i,i]=1\n",
+    "    perm16[i+4,i+8]=1\n",
+    "    perm16[i+8,i+4]=1\n",
+    "    perm16[i+12,i+12]=1\n",
+    "\n",
+    "    \n",
+    "G8_eye = np.zeros((16,16), dtype='int64')\n",
+    "G8_eye[0:8,0:8] = G8\n",
+    "G8_eye[8:16,8:16] = G8\n",
+    "G16_alt = np.matmul(np.matmul(np.matmul(G8_eye,perm16),G8_eye),perm16)\n",
+    "\n",
+    "print('G16:')\n",
+    "print(G16_alt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f157f95",
+   "metadata": {},
+   "source": [
+    "One may notice that the permutation matrix also has the pattern of a $4\\times4$ super-matrix of:\n",
+    "$$\\begin{equation} \\label{perm_mat}\n",
+    "\\Pi = \\begin{bmatrix}\n",
+    "\\mathbb{I} & \\mathbb{O} & \\mathbb{O} & \\mathbb{O} \\\\\n",
+    "\\mathbb{O} & \\mathbb{O} & \\mathbb{I} & \\mathbb{O} \\\\\n",
+    "\\mathbb{O} & \\mathbb{I} & \\mathbb{O} & \\mathbb{O} \\\\\n",
+    "\\mathbb{O} & \\mathbb{O} & \\mathbb{O} & \\mathbb{I} \\end{bmatrix}\n",
+    "\\end{equation}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "104bb529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0 0 0 0]\n",
+      " [2 1 0 0 0 0 0 0]\n",
+      " [2 0 1 0 0 0 0 0]\n",
+      " [4 2 2 1 0 0 0 0]\n",
+      " [2 0 0 0 1 0 0 0]\n",
+      " [4 2 0 0 2 1 0 0]\n",
+      " [4 0 2 0 2 0 1 0]\n",
+      " [8 4 4 2 4 2 2 1]]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f0f4f989",
+   "id": "7b00eaa2",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "444b9d75",
+   "id": "83c48801",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58489213",
+   "id": "2f7139b3",
    "metadata": {},
    "source": [
     "<details>\n",
